--- a/cplusprueba/cplusprueba.vcxproj.filters
+++ b/cplusprueba/cplusprueba.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="cplusprueba.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Calculator.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Calculator.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
